<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnChart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_1"
        app:layout_constraintBottom_toTopOf="@+id/btnChart2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChart5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChart4" />

    <Button
        android:id="@+id/btnChart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_2"
        app:layout_constraintBottom_toTopOf="@+id/btnChart3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChart1" />

    <Button
        android:id="@+id/btnChart4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_4"
        app:layout_constraintBottom_toTopOf="@+id/btnChart5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChart3" />

    <Button
        android:id="@+id/btnChart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_3"
        app:layout_constraintBottom_toTopOf="@+id/btnChart4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChart2" />

</androidx.constraintlayout.widget.ConstraintLayout>